Compiling running w instructions in the comments